@startuml
skinparam classAttributeIconSize 0

title Diagrama de clases - Moderador

class Moderador {
    - estado : EstadoPartida
    - condicion : CondicionDeVictoria
    - historial : HistorialPartida
    + iniciarPartida(Number: cantidadJugadores)
    + ejecutarRonda(Collection<Jugador>)
    + anunciarResultados()
}


class HistorialPartida {
    - resultados : Collection<ResultadoFase>
    + registrarResultado(ResultadoFase resultado)
    + mostrarResumen()
}

class FaseApertura {
    + ejecutar(Collection<Jugador>)
}

class Mazo {
    - generarPara(Number: cantidadJugadores) : Collection<Rol>
    - asignarCartas(Collection<Jugador>)
}

class CondicionDeVictoria {
    + verificar(EstadoPartida estado) : Optional<Bando>
}

enum Bando {
    MAFIA
    CIUDADANOS
}

class EstadoPartida {
    - rondaActual : Number
    + jugadores : Collection<Jugador>
    + obtenerJugadoresVivos() : Collection<Jugador>
}

Moderador ..> FaseApertura
Moderador ..> Mazo
Moderador -> EstadoPartida
Moderador --> CondicionDeVictoria
HistorialPartida <- Moderador
CondicionDeVictoria ..> Bando

@enduml